# wordtoken

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  auth.py  config.py  main.py  model.py  schemas.py  utils.py
app/routes/: __init__.py  health.py  nlp.py  site.py
deploy/: Caddyfile  remote_deploy.sh  wordtoken.service
tests/: conftest.py  test_api.py  test_model.py  test_site.py  test_utils.py
