[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordtoken"
version = "0.1.0"
description = "FastAPI starter for Myanmar word segmentation and POS tagging."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Sithu Aung" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "transformers>=4.35.0",
  "huggingface-hub>=0.23.0",
  "torch>=2.0.0",
  "pytorch-crf>=0.7.2",
  "numpy>=1.24.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
